--- a/client/src/i18n/header.de.json
+++ b/client/src/i18n/header.de.json
@@ -1,4 +1,4 @@
 { "loggedInAs": "Sie sind angemeldet als: ",
   "notLoggedIn": "Sie sind nicht angemeldet.",
-  "english":  "Englisch",
-  "german":  "Deutsch"}
+  "en":  "Englisch",
+  "de":  "Deutsch"}
