--- a/client/src/i18n/header.en.json
+++ b/client/src/i18n/header.en.json
@@ -1,4 +1,4 @@
 { "loggedInAs": "You're logged in as: ",
   "notLoggedIn": "You're not logged in.",
-  "english":  "English",
-  "german":  "German"}
+  "en":  "English",
+  "de":  "German"}
