--- a/client/src/i18n/header.en.json
+++ b/client/src/i18n/header.en.json
@@ -1,4 +1,6 @@
 { "loggedInAs": "You're logged in as: ",
   "notLoggedIn": "You're not logged in.",
   "english":  "English",
-  "german":  "German"}
+  "german":  "German",
+  "loadingLang":  "Loading Translation ...",
+  "failedLoadingLang": "Failed to Load new Language: "}
