Added a second Page.
Infos, Errors and Messages needs review.
They should reliably disappear when solved and should although be dismissible.

--- a/client/src/i18n/footer.en.json
+++ b/client/src/i18n/footer.en.json
@@ -1,4 +1,4 @@
 {
-  "footer_privacy": "Privacy Declaration",
-  "imprint": "Imprint and Support"
+  "footerPrivacy": "Privacy Declaration",
+  "footerImprint": "Imprint and Support"
 }
