--- a/client/src/i18n/footer.de.json
+++ b/client/src/i18n/footer.de.json
@@ -1,4 +1,4 @@
 {
-  "footer_privacy": "Datenschutzerklärung",
-  "imprint": "Impressum und Hilfe"
+  "footerPrivacy": "Datenschutzerklärung",
+  "footerImprint": "Impressum und Hilfe"
 }
