Introduced elm-i18next-gen.
Consider loading an initial lang inside `index.html`.

--- a/client-new/i18n/main.de.json
+++ b/client-new/i18n/main.de.json
@@ -1,3 +1,5 @@
 {
-  "yourPreferredLang" : "Ihre bevorzugte Sprache: {{lang}}"
+  "Main": {
+    "yourPreferredLang": "Ihre bevorzugte Sprache: {{lang}}"
+  }
 }
