--- a/client-new/i18n/main.en.json
+++ b/client-new/i18n/main.en.json
@@ -1,3 +1,5 @@
 {
-  "yourPreferredLang" : "Your preferred Language: {{lang}}"
+  "Main": {
+    "yourPreferredLang": "Your preferred Language: {{lang}}"
+  }
 }
