Made languages type safe.

--- a/client-new/i18n/translation.de.json
+++ b/client-new/i18n/translation.de.json
@@ -1,5 +1,9 @@
 {
   "Main": {
     "yourPreferredLang": "Ihre bevorzugte Sprache: {{lang}}"
+  },
+  "Lang": {
+    "german": "Deutsch",
+    "english": "Englisch"
   }
 }
