--- a/client-new/i18n/translation.en.json
+++ b/client-new/i18n/translation.en.json
@@ -1,5 +1,9 @@
 {
   "Main": {
     "yourPreferredLang": "Your preferred Language: {{lang}}"
+  },
+  "Lang": {
+    "german": "German",
+    "english": "English"
   }
 }
