Tried to move i18n away from `Main`.
Not fully working: Loaded translations aren't recognized by header. Option values of Select aren't selected (=recognized).

--- a/client-new/i18n/translation.de.json
+++ b/client-new/i18n/translation.de.json
@@ -1,6 +1,9 @@
 {
   "Main": {
-    "yourPreferredLang": "Ihre bevorzugte Sprache: {{lang}}"
+    "LoggedInText": "Sie sind nicht angemeldet",
+    "yourPreferredLang": "Ihre bevorzugte Sprache: {{lang}}",
+    "footerPrivacy": "Datenschutz-Erklärung",
+    "footerImprint": "Impressum"
   },
   "Lang": {
     "german": "Deutsch",
