Basic routing is working.
Next steps are showing some contents, moving header, contents and footer to `Page.elm` and moving contents to their own
modules.

--- a/client-new/i18n/translation.de.json
+++ b/client-new/i18n/translation.de.json
@@ -1,9 +1,11 @@
 {
   "Main": {
     "LoggedInText": "Sie sind nicht angemeldet",
-    "yourPreferredLang": "Ihre bevorzugte Sprache: {{lang}}",
-    "footerPrivacy": "Datenschutz-Erklärung",
-    "footerImprint": "Impressum"
+    "yourPreferredLang": "Ihre bevorzugte Sprache: {{lang}}"
+  },
+  "Route": {
+    "Privacy": "Datenschutz-Erklärung",
+    "Imprint": "Impressum"
   },
   "Lang": {
     "german": "Deutsch",
