Getting and using the session from the server is basically working.
Error Handling, Login and using the language from user are still to be done.

--- a/client-new/i18n/translation.de.json
+++ b/client-new/i18n/translation.de.json
@@ -1,6 +1,7 @@
 {
   "Main": {
-    "LoggedInText": "Sie sind nicht angemeldet",
+    "notLoggedInText": "Sie sind nicht angemeldet",
+    "loggedInText": "Sie sind angemeldet als {{name}}",
     "yourPreferredLang": "Ihre bevorzugte Sprache: {{lang}}"
   },
   "Route": {
