Redirecting to `Login.elm` from `Home.elm` works, but not from loading with valid token.
Error Handling and Login are still to be done.

--- a/client-new/i18n/translation.de.json
+++ b/client-new/i18n/translation.de.json
@@ -26,5 +26,9 @@
   "Privacy": {
     "title": "Datenschutz",
     "message": "Dies ist die Seite mit Datenschutz Informationen."
+  },
+  "Login": {
+    "title": "Anmelden",
+    "message": "Hier können Sie sich anmelden."
   }
 }
