--- a/client-new/i18n/translation.en.json
+++ b/client-new/i18n/translation.en.json
@@ -27,5 +27,9 @@
   "Privacy": {
     "title": "Privacy",
     "message": "On this page You find information on privacy."
+  },
+  "Login": {
+    "title": "Login",
+    "message": "You can login here."
   }
 }
