Login is working.
Error Handling and Logout are still to be done.

--- a/client-new/i18n/translation.de.json
+++ b/client-new/i18n/translation.de.json
@@ -29,6 +29,8 @@
   },
   "Login": {
     "title": "Anmelden",
-    "message": "Hier können Sie sich anmelden."
+    "message": "Bitte melden Sie sich an: ",
+    "username": "Benutzername",
+    "password": "Passwort"
   }
 }
