--- a/client-new/i18n/translation.en.json
+++ b/client-new/i18n/translation.en.json
@@ -30,6 +30,8 @@
   },
   "Login": {
     "title": "Login",
-    "message": "You can login here."
+    "message": "Please log in:",
+    "username": "Username",
+    "password": "Password"
   }
 }
