--- a/client-new/i18n/translation.de.json
+++ b/client-new/i18n/translation.de.json
@@ -40,6 +40,7 @@
   },
   "Message": {
     "empty": "",
+    "logoffTitle": "Abmeldung",
     "logoffSuccess": "Sie haben sich erfolgreich abgemeldet"
   }
 }
