Remaining minutes are now shown in the header.
Refreshing the session via click is still to be done.

--- a/client/i18n/translation.de.json
+++ b/client/i18n/translation.de.json
@@ -3,6 +3,7 @@
     "notLoggedInText": "Sie sind nicht angemeldet",
     "loggedInText": "Sie sind angemeldet als {{name}}",
     "logoutTooltip": "Klicken Sie hier um sich abzumelden",
+    "remainingTooltip": "In {{minutes}} Minuten werden Sie automatisch abgemeldet. Klicken Sie hier um Ihre Sitzung zu erneuern",
     "success": "Erfolg",
     "info": "Information",
     "warning": "Warnung",
