The expiration modal is basically working.
Actions on the two buttons are still missing.

--- a/client/i18n/translation.en.json
+++ b/client/i18n/translation.en.json
@@ -4,6 +4,10 @@
     "loggedInText": "You're logged in as {{name}}",
     "logoutTooltip": "Click here to log out",
     "remainingTooltip": "You will be automatically logged off in {{minutes}} minutes. Click here to refresh your session.",
+    "modalTitle" : "Your Session is going to Expire",
+    "modalBody" : "Your session is going to expire in less than tree minutes. Logout or refresh Your session.",
+    "modalLogout" : "Logout",
+    "modalRenew" : "Renew",
     "success": "Success",
     "info": "Info",
     "warning": "Warning",
