--- a/client/i18n/translation.de.json
+++ b/client/i18n/translation.de.json
@@ -4,6 +4,10 @@
     "loggedInText": "Sie sind angemeldet als {{name}}",
     "logoutTooltip": "Klicken Sie hier um sich abzumelden",
     "remainingTooltip": "In {{minutes}} Minuten werden Sie automatisch abgemeldet. Klicken Sie hier um Ihre Sitzung zu erneuern",
+    "modalTitle" : "Ihre Sitzung läuft demnächst ab",
+    "modalBody" : "Ihre Sitzung läuft in weniger als drei Minuten ab. Melden Sie sich ab oder erneuern Sie Ihre Sitzung.",
+    "modalLogout" : "Abmelden",
+    "modalRenew" : "Erneuern",
     "success": "Erfolg",
     "info": "Information",
     "warning": "Warnung",
