--- a/client/i18n/translation.en.json
+++ b/client/i18n/translation.en.json
@@ -46,6 +46,7 @@
   "Message": {
     "empty": "",
     "logoffTitle": "Logoff",
-    "logoffSuccess": "You successfully logged off"
+    "logoffSuccess": "You successfully logged off",
+    "ForcedLogoffSuccess": "You were logged off"
   }
 }
